--- a/packages/theme/src/theme/components/home-hero/index.module.scss
+++ b/packages/theme/src/theme/components/home-hero/index.module.scss
@@ -28,9 +28,8 @@
   font-family: 'Alliance No.2', Arial, sans-serif;
   font-size: 64px;
   font-style: normal;
-  font-weight: 400;
-  line-height: 1.1;
-  letter-spacing: -2.56px;
+  font-weight: 400 !important;
+  line-height: 1.1 !important;
 }
 
 .heroTaglineActions {
